--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "dotenv": "^16.4.1",
     "express": "^4.18.2",
     "mongoose": "^8.1.1",
+    "node-cache": "^5.1.2",
     "nodemon": "^3.0.3"
   }
 }
